[package]
name = "num-order"
version = "0.2.1" # TODO: bump to 1.0.0 after num-modular is stablized
edition = "2018"

license = "Apache-2.0"
description = "Numerically consistent `Eq`, `Ord` and `Hash` implementations for various `num` types (`u32`, `f64`, `num_bigint::BigInt`, etc.)"
repository = "https://github.com/cmpute/num-order"
keywords = ["numeric", "comparison", "hash", "order", "equality"]
categories = ["mathematics", "algorithms", "no-std"]
documentation = "https://docs.rs/num-order"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # TODO: check lowest dependency version before stablization
libm = { version = "0.2.0", optional = true }
num-traits = "0.2.14"
num-modular = "0.1.0"
num-bigint = { version = "0.4", optional = true }
num-rational = { version = "0.4", optional = true }
num-complex = { version = "0.4", optional = true }

[features]
default = ["libm"]
std = []

[package.metadata.docs.rs]
features = ["num-rational", "num-bigint", "num-complex"]
