[package]
name = "num-order"
version = "1.0.4"
edition = "2018"

license = "Apache-2.0"
description = "Numerically consistent `Eq`, `Ord` and `Hash` implementations for various `num` types (`u32`, `f64`, `num_bigint::BigInt`, etc.)"
repository = "https://github.com/cmpute/num-order"
keywords = ["numeric", "comparison", "hash", "order", "equality"]
categories = ["mathematics", "algorithms", "no-std"]
documentation = "https://docs.rs/num-order"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-modular = "0.5.0"
num-traits = { version = "0.2.0", optional = true }
num-bigint = { version = "0.4.0", optional = true }
num-rational = { version = "0.4.0", optional = true }
num-complex = { version = "0.4.0", optional = true }

[features]
default = []
num-bigint = ["dep:num-bigint", "num-traits"]
num-rational = ["dep:num-rational", "num-traits"]
std = []

[package.metadata.docs.rs]
features = ["num-rational", "num-bigint", "num-complex"]
